# ish

./: .gitignore  Makefile  Makefile.am  configure.ac  shell.c  test.sh
src/: Makefile  builtins.c  builtins.h  global.c  global.h  input.c  input.h  main.c  parsing.c  parsing.h  shell.c  variables.c  variables.h
